objects/Order.object
<CustomObject>
    <fields>
        <fullName>L2O_Broadcast_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broadcast Message?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_GUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Last_Integration_Date__c</fullName>
        <description>Last datetime the transaction was processed downstream</description>
        <label>Last Integration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Order_Products_Activated__c</fullName>
        <label># of Order Products Activated</label>
        <summaryFilterItems>
            <field>OrderItem.SBQQ__Activated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.L2O_Hold_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Order_Products__c</fullName>
        <label># of Order Products</label>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Send_RMA_Request_Count__c</fullName>
        <description>Describes how many Order Products have the Send RMA Request = TRUE. Requested in CR: https://pmohub.pwc.com/jira/browse/CON0000681-152610</description>
        <inlineHelpText>Describes how many Order Products have the Send RMA Request = TRUE. OIC will use this to determine if the order includes Order Products that should trigger RMA processes</inlineHelpText>
        <label>Send RMA Request Count</label>
        <summaryFilterItems>
            <field>OrderItem.L2O_Send_RMA__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.SBQQ__Activated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Unsent_Lease_Line_Count__c</fullName>
        <description>Count the # of Order Products that have a Lease lines not integrated downstream yet</description>
        <inlineHelpText>Count the # of Order Products that have a Lease lines not integrated downstream yet</inlineHelpText>
        <label>Unsent Lease Line Count</label>
        <summaryFilterItems>
            <field>OrderItem.L2O_Sales_Type__c</field>
            <operation>equals</operation>
            <value>Lease</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.L2O_Integrated_Backend__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.SBQQ__Activated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_of_Activated_Hold_Order_Products__c</fullName>
        <label># of Activated &amp; Hold Order Products</label>
        <summaryFilterItems>
            <field>OrderItem.SBQQ__Activated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.L2O_Hold_Order__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_of_Integrated_Backend_Order_Products__c</fullName>
        <label># of Integrated Backend Order Products</label>
        <summaryFilterItems>
            <field>OrderItem.L2O_Integrated_Backend__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_of_USGH_Order_Products__c</fullName>
        <label># of USGH Order Products</label>
        <summaryFilterItems>
            <field>OrderItem.L2O_Service_Platform__c</field>
            <operation>notEqual</operation>
            <value>HHS</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Group</label>
        <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderBookings__c</fullName>
        <description>Total amount of all order product bookings.</description>
        <inlineHelpText>Total amount of all order product bookings.</inlineHelpText>
        <label>Order Bookings</label>
        <summarizedField>OrderItem.SBQQ__OrderProductBookings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
        <description>The price calculation status message.</description>
        <inlineHelpText>The price calculation status message</inlineHelpText>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatus__c</fullName>
        <description>The order price calculation  job status.  It is set by the system.</description>
        <inlineHelpText>Indicates the order price calculation job status.  It is set by the system.</inlineHelpText>
        <label>Price Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__JobStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>The estimated tax amount</description>
        <inlineHelpText>The estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <summarizedField>OrderItem.SBQQ__TaxAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>L2O_Validate_Broadcast_Message</fullName>
        <active>true</active>
        <errorConditionFormula>if(ISCHANGED(Status) &amp;&amp; L2O_Broadcast_Message__c = true,
true,
AND(
L2O_Broadcast_Message__c = true,
 NOT(ISPICKVAL(Status, &apos;Activated&apos;)))
)</errorConditionFormula>
        <errorMessage>Broadcast Message? can only be true once the status is Activated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Validate_OrderStatus</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(Status),
ISPICKVAL( PRIORVALUE(Status), &apos;Activated&apos;)
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>An activated Order can not go back to Draft, please Amend or process new Order Lines downstream by using the &apos;Broadcast Message?&apos; checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2O_Validate_Order_Products</fullName>
        <active>true</active>
        <errorConditionFormula>L2O_Broadcast_Message__c == true &amp;&amp; L2O_of_Activated_Hold_Order_Products__c &gt; 0</errorConditionFormula>
        <errorMessage>Order Products cannot be on Hold and Activated at the same time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Cannot_Contract_New_Order</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), SBQQ__Contracted__c)</errorConditionFormula>
        <errorDisplayField>SBQQ__Contracted__c</errorDisplayField>
        <errorMessage>Can&apos;t contract the order. Activate the order and try again.</errorMessage>
    </validationRules>
</CustomObject>